--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,8 @@ dependencies {
 
     // Paging 3
     implementation "androidx.paging:paging-runtime:$pagingVersion"
+
+    //Mockito
+  testImplementation "org.mockito:mockito-core:3.+"
+    testImplementation "android.arch.core:core-testing:1.0.0"
 }
